# wannier-optics

./: .gitignore  CMakeLists.txt  ReadMe.md  configure_and_build.sh  dependencies.txt
python-scripts/: pyproject.toml  utils.py  wo-absorption.py  wo-tight-binding.py
tutorial/01_Si/: ReadMe.md
tutorial/01_Si/converged_calculation/: ONSITE_ENERGY_c  ONSITE_ENERGY_v  PARFILE  POSFILE  Si_exp.csv  TINFILE_c  TINFILE_v  TRANSITION  compare_to_exp.py  input.ini  run.sh  vmapping.txt
tutorial/01_Si/converged_calculation/output/: OUTFILE  T000KNormPsi  T000KOverlap  T000Kanbn  T000Kcn
tutorial/01_Si/solution/: COULOMB  CUSTOM  LOCALFIELDEFFECTS  ONSITE_ENERGY_v  PARFILE  POSFILE  TINFILE_c  TINFILE_v  TRANSITION  cmapping.txt  input.ini  output_wo-coulomb_1.txt  output_wo-coulomb_2.txt  output_wo-optic_1.txt  output_wo-optic_2.txt  output_wo-tight-binding.txt
tutorial/01_Si/solution/output/: OUTFILE  T000KNormPsi  T000KOverlap  T000Kanbn  T000Kcn
tutorial/02_Wannier-Mott/: ReadMe.md  peak_analyse.py
tutorial/02_Wannier-Mott/solution/: COULOMB  LOCALFIELDEFFECTS  ONSITE_ENERGY_c  PARFILE  POSFILE  TINFILE_c  output_wo-optics.txt  peak_analyse.py
tutorial/02_Wannier-Mott/solution/output/: OUTFILE  T000KNormPsi  T000KOverlap  T000Kanbn  T000Kcn
wo-coulomb/: CHGCAR.h  CMakeLists.txt  ReadMe.md  algebra.h  confGenerator.h  configure_and_build.sh  coulombIntegral.h  density.h  docs_config  filehandler.h  generator.cpp  main.cpp  meshgrid.h  mpi_tags.h  opticalDipole.h  parallel_computation.h  potential.h  runTests.sh  scheduler.h  screening_test.py  solver.h  test_case_local_field_effects.py  wannierfunction.h  welcome.h
wo-coulomb/tests/: CHGCARTest.cpp  CMakeLists.txt  DensityTest.cpp  FourierShiftTest.cpp  ImplementationCoulombSolverTest.cpp  ImplementationTest.cpp  LocalFieldEffectsTest.cpp  MeshgridTest.cpp  OpticalDipoleTest.cpp  SchedulerTest.cpp  WannierfunctionTest.cpp  XSF_controllerTest.cpp  tests.cpp
wo-optics/: CMakeLists.txt  ReadMe.md  algorithms.f90  geometry.f90  hamiltonian.f90  main.f90  parfile.f90  potentials.f90  seed_data.f90  sparseCSR.f90  test_geometry.f90  test_geometry_mod.f90  test_parfile.f90
wo-optics/tests/Coulomb_test1/: COULOMB  DISFILE  LOCALFIELDEFFECTS  ONSITE_ENERGY_v  PARFILE  POSFILE  README.txt  peak_analyse.py
wo-optics/tests/Coulomb_test2/: COULOMB  PARFILE  POSFILE  README.txt  TINFILE_v  peak_analyse.py
wo-optics/tests/LFE_test1/: LOCALFIELDEFFECTS  LOCALFIELDEFFECTS_simple  ONSITE_ENERGY_c  PARFILE  POSFILE  README.txt  peak_analyse.py
wo-optics/tests/LFE_test2/: COULOMB  LOCALFIELDEFFECTS  ONSITE_ENERGY_v  PARFILE  POSFILE  README.txt  TEMPERATURE  TINFILE_c  TINFILE_v  TRANSITION  peak_analyse.py
wo-optics/tests/hydrogen_test/: COULOMB  LOCALFIELDEFFECTS  PARFILE  POSFILE  TINFILE_v  newPARFILE  peak_analyse.py
wo-optics/tests/hydrogen_test/output/: OUTFILE  T000KNormPsi  T000KOverlap  T000Kanbn  T000Kcn
wo-optics/tests/hydrogen_test2/: COULOMB  ONSITE_ENERGY_c  PARFILE  POSFILE  peak_analyse.py
